infra/k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jammers-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-registry
      containers:
        - name: app
          imagePullPolicy: Always
