infra/k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jammers-web
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - thejammers.org
      secretName: jammers-next-gig-ingress-tls
  rules:
    - host: thejammers.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jammers-web
                port:
                  number: 80
